apps/backstage/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage-kubernetes
      imagePullSecrets:
        - name: nexus-docker-creds
      containers:
        - name: backstage
          image: nexus.lab.mxe11.nl/backstage/backstage:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          startupProbe:
            httpGet:
              port: http
              path: /.backstage/health/v1/liveness
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: http
              path: /.backstage/health/v1/readiness
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: http
              path: /.backstage/health/v1/liveness
            periodSeconds: 10
            failureThreshold: 3
