apps/backstage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
      sectionName: https-backstage
  hostnames:
    - backstage.lab.mxe11.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-redirect
  namespace: backstage
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
      sectionName: http
  hostnames:
    - backstage.lab.mxe11.nl
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
